commit test on branch

--- a/notes.ipynb
+++ b/notes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,22 @@
           "Art",
           "Competitions",
           "Skating",
-          "Archery"
+          "Archery",
+          "Rowing",
+          "Canoeing",
+          "Cross",
+          "Relay",
+          "Country",
+          "Speed",
+          "Weightlifting",
+          "Military",
+          "Fencing",
+          "Equestrianism",
+          "Kayak",
+          "Pistol,",
+          "Tennis",
+          "Boxing",
+          "Judo"
          ],
          "legendgroup": "",
          "name": "",
@@ -373,7 +388,22 @@
           30,
           30,
           30,
-          30
+          30,
+          28,
+          28,
+          26,
+          25,
+          24,
+          23,
+          22,
+          22,
+          19,
+          19,
+          18,
+          18,
+          17,
+          16,
+          16
          ]
         }
        ],
@@ -1210,7 +1240,7 @@
    "source": [
     "import plotly.express as px\n",
     "\n",
-    "a = word_series.head(15) # 10 most common words\n",
+    "a = word_series.head(30) # 10 most common words\n",
     "df = pd.DataFrame(a)\n",
     "fig = px.pie(df, values=0, names=a.index, title=\"Most popular sports category by name and occurence\")\n",
     "\n",
@@ -1219,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1258,7 @@
        "\"Shooting Men's Military Rifle, 1873-1874 Gras Model, Kneeling Or Standing, 200 metres\""
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
