--- a/notes.ipynb
+++ b/notes.ipynb
@@ -1302,7 +1302,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('Databehandling-William-Akilles-Lindstedt-bpWULdXK')",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1321,7 +1321,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "08e7c39814852de79614705ad3fad31d43fa5fdc6f76ae0c28142b09245f6875"
+    "hash": "aa93088360420e47a92e6fc9121e9159dbf1900a5f483a704136b076cb810347"
    }
   }
  },
