hashing  func for athlete names

--- a/notes.ipynb
+++ b/notes.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.io as pio\n",
+    "pio.templates.default = \"plotly_dark\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +171,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +199,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +298,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,18 +306,16 @@
    "source": [
     "counter_tuple = Counter.most_common(len(Counter))\n",
     "items, counts = zip(*counter_tuple)\n",
-    "word_series = pd.Series(counts, index=items)\n",
-    "\n",
-    "word_series.head(20)"
+    "word_series = pd.Series(counts, index=items)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dropping some prefixes, sufixes, measurementes, integers, and non-sports related word occurences\n",
+    "# Dropping some prefixes, sufixes, measurementes, integers, and non-sports related word occurrences\n",
     "to_drop = [\"Men's\", \"Women's\", \"Team\", \"metres\", \"Mixed\", \"kilometres\", \"50\", \"100\", \"200\", \"x\", \"4\", \"10\", \"metres,\", \"500\", \"300\", \"Singles,\", \"Competition\", \"Free\"]\n",
     "for i in to_drop:\n",
     "    word_series.pop(i)"
@@ -315,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -416,14 +424,14 @@
           "bar": [
            {
             "error_x": {
-             "color": "#2a3f5f"
+             "color": "#f2f5fa"
             },
             "error_y": {
-             "color": "#2a3f5f"
+             "color": "#f2f5fa"
             },
             "marker": {
              "line": {
-              "color": "#E5ECF6",
+              "color": "rgb(17,17,17)",
               "width": 0.5
              },
              "pattern": {
@@ -439,7 +447,7 @@
            {
             "marker": {
              "line": {
-              "color": "#E5ECF6",
+              "color": "rgb(17,17,17)",
               "width": 0.5
              },
              "pattern": {
@@ -454,18 +462,18 @@
           "carpet": [
            {
             "aaxis": {
-             "endlinecolor": "#2a3f5f",
-             "gridcolor": "white",
-             "linecolor": "white",
-             "minorgridcolor": "white",
-             "startlinecolor": "#2a3f5f"
+             "endlinecolor": "#A2B1C6",
+             "gridcolor": "#506784",
+             "linecolor": "#506784",
+             "minorgridcolor": "#506784",
+             "startlinecolor": "#A2B1C6"
             },
             "baxis": {
-             "endlinecolor": "#2a3f5f",
-             "gridcolor": "white",
-             "linecolor": "white",
-             "minorgridcolor": "white",
-             "startlinecolor": "#2a3f5f"
+             "endlinecolor": "#A2B1C6",
+             "gridcolor": "#506784",
+             "linecolor": "#506784",
+             "minorgridcolor": "#506784",
+             "startlinecolor": "#A2B1C6"
             },
             "type": "carpet"
            }
@@ -783,10 +791,10 @@
           ],
           "scatter": [
            {
-            "fillpattern": {
-             "fillmode": "overlay",
-             "size": 10,
-             "solidity": 0.2
+            "marker": {
+             "line": {
+              "color": "#283442"
+             }
             },
             "type": "scatter"
            }
@@ -833,9 +841,8 @@
           "scattergl": [
            {
             "marker": {
-             "colorbar": {
-              "outlinewidth": 0,
-              "ticks": ""
+             "line": {
+              "color": "#283442"
              }
             },
             "type": "scattergl"
@@ -940,18 +947,18 @@
            {
             "cells": {
              "fill": {
-              "color": "#EBF0F8"
+              "color": "#506784"
              },
              "line": {
-              "color": "white"
+              "color": "rgb(17,17,17)"
              }
             },
             "header": {
              "fill": {
-              "color": "#C8D4E3"
+              "color": "#2a3f5f"
              },
              "line": {
-              "color": "white"
+              "color": "rgb(17,17,17)"
              }
             },
             "type": "table"
@@ -960,7 +967,7 @@
          },
          "layout": {
           "annotationdefaults": {
-           "arrowcolor": "#2a3f5f",
+           "arrowcolor": "#f2f5fa",
            "arrowhead": 0,
            "arrowwidth": 1
           },
@@ -1116,113 +1123,123 @@
            "#FECB52"
           ],
           "font": {
-           "color": "#2a3f5f"
+           "color": "#f2f5fa"
           },
           "geo": {
-           "bgcolor": "white",
-           "lakecolor": "white",
-           "landcolor": "#E5ECF6",
+           "bgcolor": "rgb(17,17,17)",
+           "lakecolor": "rgb(17,17,17)",
+           "landcolor": "rgb(17,17,17)",
            "showlakes": true,
            "showland": true,
-           "subunitcolor": "white"
+           "subunitcolor": "#506784"
           },
           "hoverlabel": {
            "align": "left"
           },
           "hovermode": "closest",
           "mapbox": {
-           "style": "light"
+           "style": "dark"
           },
-          "paper_bgcolor": "white",
-          "plot_bgcolor": "#E5ECF6",
+          "paper_bgcolor": "rgb(17,17,17)",
+          "plot_bgcolor": "rgb(17,17,17)",
           "polar": {
            "angularaxis": {
-            "gridcolor": "white",
-            "linecolor": "white",
+            "gridcolor": "#506784",
+            "linecolor": "#506784",
             "ticks": ""
            },
-           "bgcolor": "#E5ECF6",
+           "bgcolor": "rgb(17,17,17)",
            "radialaxis": {
-            "gridcolor": "white",
-            "linecolor": "white",
+            "gridcolor": "#506784",
+            "linecolor": "#506784",
             "ticks": ""
            }
           },
           "scene": {
            "xaxis": {
-            "backgroundcolor": "#E5ECF6",
-            "gridcolor": "white",
+            "backgroundcolor": "rgb(17,17,17)",
+            "gridcolor": "#506784",
             "gridwidth": 2,
-            "linecolor": "white",
+            "linecolor": "#506784",
             "showbackground": true,
             "ticks": "",
-            "zerolinecolor": "white"
+            "zerolinecolor": "#C8D4E3"
            },
            "yaxis": {
-            "backgroundcolor": "#E5ECF6",
-            "gridcolor": "white",
+            "backgroundcolor": "rgb(17,17,17)",
+            "gridcolor": "#506784",
             "gridwidth": 2,
-            "linecolor": "white",
+            "linecolor": "#506784",
             "showbackground": true,
             "ticks": "",
-            "zerolinecolor": "white"
+            "zerolinecolor": "#C8D4E3"
            },
            "zaxis": {
-            "backgroundcolor": "#E5ECF6",
-            "gridcolor": "white",
+            "backgroundcolor": "rgb(17,17,17)",
+            "gridcolor": "#506784",
             "gridwidth": 2,
-            "linecolor": "white",
+            "linecolor": "#506784",
             "showbackground": true,
             "ticks": "",
-            "zerolinecolor": "white"
+            "zerolinecolor": "#C8D4E3"
            }
           },
           "shapedefaults": {
            "line": {
-            "color": "#2a3f5f"
+            "color": "#f2f5fa"
            }
+          },
+          "sliderdefaults": {
+           "bgcolor": "#C8D4E3",
+           "bordercolor": "rgb(17,17,17)",
+           "borderwidth": 1,
+           "tickwidth": 0
           },
           "ternary": {
            "aaxis": {
-            "gridcolor": "white",
-            "linecolor": "white",
+            "gridcolor": "#506784",
+            "linecolor": "#506784",
             "ticks": ""
            },
            "baxis": {
-            "gridcolor": "white",
-            "linecolor": "white",
+            "gridcolor": "#506784",
+            "linecolor": "#506784",
             "ticks": ""
            },
-           "bgcolor": "#E5ECF6",
+           "bgcolor": "rgb(17,17,17)",
            "caxis": {
-            "gridcolor": "white",
-            "linecolor": "white",
+            "gridcolor": "#506784",
+            "linecolor": "#506784",
             "ticks": ""
            }
           },
           "title": {
            "x": 0.05
           },
+          "updatemenudefaults": {
+           "bgcolor": "#506784",
+           "borderwidth": 0
+          },
           "xaxis": {
            "automargin": true,
-           "gridcolor": "white",
-           "linecolor": "white",
+           "gridcolor": "#283442",
+           "linecolor": "#506784",
            "ticks": "",
            "title": {
             "standoff": 15
            },
-           "zerolinecolor": "white",
+           "zerolinecolor": "#283442",
            "zerolinewidth": 2
           },
           "yaxis": {
            "automargin": true,
-           "gridcolor": "white",
-           "linecolor": "white",
+           "gridcolor": "#283442",
+           "linecolor": "#506784",
            "ticks": "",
            "title": {
             "standoff": 15
            },
-           "zerolinecolor": "white",
+           "zerolinecolor": "#283442",
            "zerolinewidth": 2
           }
          }
@@ -1241,15 +1258,15 @@
     "import plotly.express as px\n",
     "\n",
     "a = word_series.head(30) # 10 most common words\n",
-    "df = pd.DataFrame(a)\n",
-    "fig = px.pie(df, values=0, names=a.index, title=\"Most popular sports category by name and occurence\")\n",
+    "df_words = pd.DataFrame(a)\n",
+    "fig = px.pie(df_words, values=0, names=a.index, title=\"Most popular sports category by name and occurrence\")\n",
     "\n",
     "fig.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1275,7 @@
        "\"Shooting Men's Military Rifle, 1873-1874 Gras Model, Kneeling Or Standing, 200 metres\""
       ]
      },
-     "execution_count": 10,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1266,6 +1283,88 @@
    "source": [
     "max(sport_li,key=len) # Notable award: Longest name of sport"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['United States',\n",
+       " 'France',\n",
+       " 'Great Britain',\n",
+       " 'Italy',\n",
+       " 'Germany',\n",
+       " 'Canada',\n",
+       " 'Japan',\n",
+       " 'Sweden',\n",
+       " 'Australia',\n",
+       " 'Hungary',\n",
+       " 'Poland',\n",
+       " 'Switzerland',\n",
+       " 'Netherlands',\n",
+       " 'Soviet Union',\n",
+       " 'Finland',\n",
+       " 'Spain',\n",
+       " 'China',\n",
+       " 'Russia',\n",
+       " 'Austria',\n",
+       " 'Norway']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Team'].value_counts()[:20].index.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "261       341116996c59575b8e0a66ad3d42f5063c72c9d5fd8840...\n",
+       "669       0740975bf9235edebcecc325eeff6e611f13de55abfc11...\n",
+       "670       0740975bf9235edebcecc325eeff6e611f13de55abfc11...\n",
+       "687       1acabc3b523678f8cd7b07dd38a5a0808f8d799b0a52c0...\n",
+       "688       1acabc3b523678f8cd7b07dd38a5a0808f8d799b0a52c0...\n",
+       "                                ...                        \n",
+       "271022    42156dcc7b72b9287ac23dec315bdb6aae1cf617fb8a21...\n",
+       "271023    42156dcc7b72b9287ac23dec315bdb6aae1cf617fb8a21...\n",
+       "271024    42156dcc7b72b9287ac23dec315bdb6aae1cf617fb8a21...\n",
+       "271026    5f22b3b853ae9e61fd4cae0f75a35b6e3ac80413258cc0...\n",
+       "271027    c06b52a4b4b0facf8a8c6fbdd3fb949d47104ccbce2b6a...\n",
+       "Name: Name, Length: 9326, dtype: object"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import hashlib\n",
+    "\n",
+    "df_GER = df.loc[df['Team'] == 'Germany']\n",
+    "\n",
+    "# Apply hashing function to the column\n",
+    "df_GER.iloc[:,1].apply(lambda x: hashlib.sha256(x.encode()).hexdigest())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1332,7 +1431,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "Python 3.9.13 ('Databehandling-William-Akilles-Lindstedt-bpWULdXK')",
    "language": "python",
    "name": "python3"
   },
@@ -1351,7 +1450,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aa93088360420e47a92e6fc9121e9159dbf1900a5f483a704136b076cb810347"
+    "hash": "08e7c39814852de79614705ad3fad31d43fa5fdc6f76ae0c28142b09245f6875"
    }
   }
  },
