new filename & filepath for csv imports

--- a/Notes/vin_Uppgift 0.ipynb
+++ b/Notes/vin_Uppgift 0.ipynb
@@ -178,7 +178,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_csv(\"../Project/Data/athlete_events.csv\")\n",
+    "df = pd.read_csv(\"../Data/athlete_events.csv\")\n",
     "df.head()"
    ]
   },
@@ -263,7 +263,7 @@
     }
    ],
    "source": [
-    "df1 = pd.read_csv(\"../Project/Data/noc_regions.csv\") #### NOC: National Olympic Committee\n",
+    "df1 = pd.read_csv(\"../Data/noc_regions.csv\") #### NOC: National Olympic Committee\n",
     "df1.head()\n"
    ]
   },
@@ -3638,7 +3638,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('Databehandling-Vineela-Nedunuri-LgAYhuxz')",
+   "display_name": "Python 3.9.13 ('Databehandling-William-Akilles-Lindstedt-bpWULdXK')",
    "language": "python",
    "name": "python3"
   },
@@ -3657,7 +3657,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6a82f5107a13012c868f5218eea1477a67cc06b95c05a43ff8b0398a52597d16"
+    "hash": "08e7c39814852de79614705ad3fad31d43fa5fdc6f76ae0c28142b09245f6875"
    }
   }
  },
