--- a/Notes/vin_Uppgift 1.ipynb
+++ b/Notes/vin_Uppgift 1.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "4  AND      Andorra"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,17 +104,17 @@
    "source": [
     "import pandas as pd\n",
     "# first data file\n",
-    "df = pd.read_csv(\"../Project/Data/athlete_events.csv\", usecols=['Name', 'Age', 'Sex', 'Team', 'NOC','Games','Year','Sport','Medal'])\n",
+    "df = pd.read_csv(\"../Data/athlete_events.csv\", usecols=['Name', 'Age', 'Sex', 'Team', 'NOC','Games','Year','Sport','Medal'])\n",
     "df.head()\n",
     "\n",
     "# second data file\n",
-    "df1 = pd.read_csv(\"../Project/Data/noc_regions.csv\",usecols=['region', 'NOC']) #### NOC: National Olympic Committee\n",
+    "df1 = pd.read_csv(\"../Data/noc_regions.csv\",usecols=['region', 'NOC']) #### NOC: National Olympic Committee\n",
     "df1.head() \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "4  1964 Summer  1964.0  Wrestling   NaN  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "Name: Name, Length: 15883, dtype: object"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "[15883 rows x 10 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +534,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('Databehandling-Vineela-Nedunuri-LgAYhuxz')",
+   "display_name": "Python 3.9.13 ('Databehandling-William-Akilles-Lindstedt-bpWULdXK')",
    "language": "python",
    "name": "python3"
   },
@@ -553,7 +553,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6a82f5107a13012c868f5218eea1477a67cc06b95c05a43ff8b0398a52597d16"
+    "hash": "08e7c39814852de79614705ad3fad31d43fa5fdc6f76ae0c28142b09245f6875"
    }
   }
  },
