task e, conflicting results, fillna(mean_value)

--- a/Project/Uppgift_0.ipynb
+++ b/Project/Uppgift_0.ipynb
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "4  Speed Skating Women's 500 metres   NaN  Netherlands   NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,6 +584,64 @@
     "# useful since the overwhelming majority didn't win a medal or there's actual missing data\n",
     "medals = df[\"Medal\"].dropna().unique()\n",
     "print(f\"There are three medals; {medals}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##   e) ta reda på statistik för åldern: medelvärde, median, min, max, standardavvikelse,\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean age is: 25.56 years\n",
+      "The median age is: 25 years\n",
+      "The minimum age is: 10 years\n",
+      "The maximum age is: 97 years\n",
+      "The standard deviation is: 6.280857346147529\n"
+     ]
+    }
+   ],
+   "source": [
+    "# a way to fill NaNs with the mean age.\n",
+    "# there's a argument to be hand whether it's better to do dropna() instead.\n",
+    "# i decided to do fillna(mean_value) rather than dropna()\n",
+    "# the difference between the two values is very low, less than ~1%\n",
+    "\n",
+    "# TODO: try to remove the decimals from mean_to_fill_nan, not sure how the effect the results of std\n",
+    "mean_to_fill_nan = df[\"Age\"].mean()\n",
+    "df[\"Age\"].fillna(value=mean_to_fill_nan, inplace=True)\n",
+    "mean = df[\"Age\"].mean()\n",
+    "print(f\"The mean age is: {mean:.2f} years\")\n",
+    "\n",
+    "median = df[\"Age\"].median()\n",
+    "print(f\"The median age is: {median:.0f} years\")\n",
+    "\n",
+    "min = df[\"Age\"].min()\n",
+    "print(f\"The minimum age is: {min:.0f} years\")\n",
+    "\n",
+    "max = df[\"Age\"].max()\n",
+    "print(f\"The maximum age is: {max:.0f} years\")\n",
+    "\n",
+    "standard_deviation = df[\"Age\"].std()\n",
+    "print(f\"The standard deviation is: {standard_deviation}\")"
    ]
   }
  ],
