--- a/Project/Uppgift 0.ipynb
+++ b/Project/Uppgift 0.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,13 +179,13 @@
     "import numpy as np\n",
     "\n",
     "# read first data file\n",
-    "df = pd.read_csv(\"../Project/Data/athlete_events.csv\")\n",
+    "df = pd.read_csv(\"../Project/olympicdata/athlete_events.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -258,20 +258,20 @@
        "4  AND      Andorra                   NaN"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# read second data file\n",
-    "df1 = pd.read_csv(\"../Project/Data/noc_regions.csv\") #### NOC: National Olympic Committee\n",
+    "df1 = pd.read_csv(\"../Project/olympicdata/noc_regions.csv\") #### NOC: National Olympic Committee\n",
     "df1.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "4  Speed Skating Women's 500 metres   NaN  Netherlands   NaN  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +767,7 @@
        "4  Speed Skating Women's 500 metres     0  Netherlands     0  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
        "(74522, 196594)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1135,7 @@
        "M    196594  196594  196594  196594  28530  196360   4138  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1147,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
        "Name: ID, dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1179,7 @@
        "Text(0.5, 1.0, 'The total male and female athlets in Olympics')"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1210,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1312,7 @@
        "1   NaN  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1323,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1347,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>region</th>\n",
+       "      <th>index</th>\n",
        "      <th>Medal</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1355,84 +1355,84 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>USA</td>\n",
-       "      <td>5637</td>\n",
+       "      <td>18853</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Russia</td>\n",
-       "      <td>3947</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>15883</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>3756</td>\n",
+       "      <td>France</td>\n",
+       "      <td>12758</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>UK</td>\n",
-       "      <td>2068</td>\n",
+       "      <td>12256</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>France</td>\n",
-       "      <td>1777</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>11692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Italy</td>\n",
-       "      <td>1637</td>\n",
+       "      <td>10715</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Sweden</td>\n",
-       "      <td>1536</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>9734</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Canada</td>\n",
-       "      <td>1352</td>\n",
+       "      <td>Japan</td>\n",
+       "      <td>8444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>1349</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>8339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Hungary</td>\n",
-       "      <td>1135</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>7724</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      region  Medal\n",
-       "0        USA   5637\n",
-       "1     Russia   3947\n",
-       "2    Germany   3756\n",
-       "3         UK   2068\n",
-       "4     France   1777\n",
-       "5      Italy   1637\n",
-       "6     Sweden   1536\n",
-       "7     Canada   1352\n",
-       "8  Australia   1349\n",
-       "9    Hungary   1135"
+       "       index  Medal\n",
+       "0        USA  18853\n",
+       "1    Germany  15883\n",
+       "2     France  12758\n",
+       "3         UK  12256\n",
+       "4     Russia  11692\n",
+       "5      Italy  10715\n",
+       "6     Canada   9734\n",
+       "7      Japan   8444\n",
+       "8     Sweden   8339\n",
+       "9  Australia   7724"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_medal = df_merge.groupby(\"region\")[[\"Medal\"]].count().sort_values(by = \"Medal\",ascending= False).head(10).reset_index()\n",
-    "df_medal"
+    "df_medals = df_merge.region.value_counts().reset_index(name='Medal').head(10)\n",
+    "df_medals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1463,32 +1463,7 @@
          ],
          "xaxis": "x",
          "y": [
-          5637
-         ],
-         "yaxis": "y"
-        },
-        {
-         "alignmentgroup": "True",
-         "hovertemplate": "region=%{x}<br>Medal=%{y}<extra></extra>",
-         "legendgroup": "Russia",
-         "marker": {
-          "color": "#EF553B",
-          "pattern": {
-           "shape": ""
-          }
-         },
-         "name": "Russia",
-         "offsetgroup": "Russia",
-         "orientation": "v",
-         "showlegend": true,
-         "textposition": "auto",
-         "type": "bar",
-         "x": [
-          "Russia"
-         ],
-         "xaxis": "x",
-         "y": [
-          3947
+          18853
          ],
          "yaxis": "y"
         },
@@ -1497,7 +1472,7 @@
          "hovertemplate": "region=%{x}<br>Medal=%{y}<extra></extra>",
          "legendgroup": "Germany",
          "marker": {
-          "color": "#00cc96",
+          "color": "#EF553B",
           "pattern": {
            "shape": ""
           }
@@ -1513,7 +1488,32 @@
          ],
          "xaxis": "x",
          "y": [
-          3756
+          15883
+         ],
+         "yaxis": "y"
+        },
+        {
+         "alignmentgroup": "True",
+         "hovertemplate": "region=%{x}<br>Medal=%{y}<extra></extra>",
+         "legendgroup": "France",
+         "marker": {
+          "color": "#00cc96",
+          "pattern": {
+           "shape": ""
+          }
+         },
+         "name": "France",
+         "offsetgroup": "France",
+         "orientation": "v",
+         "showlegend": true,
+         "textposition": "auto",
+         "type": "bar",
+         "x": [
+          "France"
+         ],
+         "xaxis": "x",
+         "y": [
+          12758
          ],
          "yaxis": "y"
         },
@@ -1538,32 +1538,32 @@
          ],
          "xaxis": "x",
          "y": [
-          2068
+          12256
          ],
          "yaxis": "y"
         },
         {
          "alignmentgroup": "True",
          "hovertemplate": "region=%{x}<br>Medal=%{y}<extra></extra>",
-         "legendgroup": "France",
+         "legendgroup": "Russia",
          "marker": {
           "color": "#FFA15A",
           "pattern": {
            "shape": ""
           }
          },
-         "name": "France",
-         "offsetgroup": "France",
+         "name": "Russia",
+         "offsetgroup": "Russia",
          "orientation": "v",
          "showlegend": true,
          "textposition": "auto",
          "type": "bar",
          "x": [
-          "France"
+          "Russia"
          ],
          "xaxis": "x",
          "y": [
-          1777
+          11692
          ],
          "yaxis": "y"
         },
@@ -1588,32 +1588,7 @@
          ],
          "xaxis": "x",
          "y": [
-          1637
-         ],
-         "yaxis": "y"
-        },
-        {
-         "alignmentgroup": "True",
-         "hovertemplate": "region=%{x}<br>Medal=%{y}<extra></extra>",
-         "legendgroup": "Sweden",
-         "marker": {
-          "color": "#FF6692",
-          "pattern": {
-           "shape": ""
-          }
-         },
-         "name": "Sweden",
-         "offsetgroup": "Sweden",
-         "orientation": "v",
-         "showlegend": true,
-         "textposition": "auto",
-         "type": "bar",
-         "x": [
-          "Sweden"
-         ],
-         "xaxis": "x",
-         "y": [
-          1536
+          10715
          ],
          "yaxis": "y"
         },
@@ -1622,7 +1597,7 @@
          "hovertemplate": "region=%{x}<br>Medal=%{y}<extra></extra>",
          "legendgroup": "Canada",
          "marker": {
-          "color": "#B6E880",
+          "color": "#FF6692",
           "pattern": {
            "shape": ""
           }
@@ -1638,7 +1613,57 @@
          ],
          "xaxis": "x",
          "y": [
-          1352
+          9734
+         ],
+         "yaxis": "y"
+        },
+        {
+         "alignmentgroup": "True",
+         "hovertemplate": "region=%{x}<br>Medal=%{y}<extra></extra>",
+         "legendgroup": "Japan",
+         "marker": {
+          "color": "#B6E880",
+          "pattern": {
+           "shape": ""
+          }
+         },
+         "name": "Japan",
+         "offsetgroup": "Japan",
+         "orientation": "v",
+         "showlegend": true,
+         "textposition": "auto",
+         "type": "bar",
+         "x": [
+          "Japan"
+         ],
+         "xaxis": "x",
+         "y": [
+          8444
+         ],
+         "yaxis": "y"
+        },
+        {
+         "alignmentgroup": "True",
+         "hovertemplate": "region=%{x}<br>Medal=%{y}<extra></extra>",
+         "legendgroup": "Sweden",
+         "marker": {
+          "color": "#FF97FF",
+          "pattern": {
+           "shape": ""
+          }
+         },
+         "name": "Sweden",
+         "offsetgroup": "Sweden",
+         "orientation": "v",
+         "showlegend": true,
+         "textposition": "auto",
+         "type": "bar",
+         "x": [
+          "Sweden"
+         ],
+         "xaxis": "x",
+         "y": [
+          8339
          ],
          "yaxis": "y"
         },
@@ -1647,7 +1672,7 @@
          "hovertemplate": "region=%{x}<br>Medal=%{y}<extra></extra>",
          "legendgroup": "Australia",
          "marker": {
-          "color": "#FF97FF",
+          "color": "#FECB52",
           "pattern": {
            "shape": ""
           }
@@ -1663,32 +1688,7 @@
          ],
          "xaxis": "x",
          "y": [
-          1349
-         ],
-         "yaxis": "y"
-        },
-        {
-         "alignmentgroup": "True",
-         "hovertemplate": "region=%{x}<br>Medal=%{y}<extra></extra>",
-         "legendgroup": "Hungary",
-         "marker": {
-          "color": "#FECB52",
-          "pattern": {
-           "shape": ""
-          }
-         },
-         "name": "Hungary",
-         "offsetgroup": "Hungary",
-         "orientation": "v",
-         "showlegend": true,
-         "textposition": "auto",
-         "type": "bar",
-         "x": [
-          "Hungary"
-         ],
-         "xaxis": "x",
-         "y": [
-          1135
+          7724
          ],
          "yaxis": "y"
         }
@@ -2524,15 +2524,15 @@
          "anchor": "y",
          "categoryarray": [
           "USA",
-          "Russia",
           "Germany",
-          "UK",
           "France",
+          "UK",
+          "Russia",
           "Italy",
-          "Sweden",
           "Canada",
-          "Australia",
-          "Hungary"
+          "Japan",
+          "Sweden",
+          "Australia"
          ],
          "categoryorder": "array",
          "domain": [
@@ -2563,7 +2563,8 @@
    "source": [
     "import plotly.express as px\n",
     "\n",
-    "fig = px.bar(df_medal, x='region', y='Medal', color = 'region',title= \"Top 10 countries that won the most medals\")\n",
+    "fig = px.bar(df_medals, x='index', y='Medal', color = 'index', labels= {\"index\":\"region\"},\n",
+    "title= \"Top 10 countries that won the most medals\")\n",
     "fig.show()\n"
    ]
   },
@@ -2576,7 +2577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2663,7 +2664,7 @@
        "Australia     522.0  368.0   459.0   1349"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2686,7 +2687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2773,7 +2774,7 @@
        "UK         651.0    678.0    739.0   2068"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2785,7 +2786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2872,7 +2873,7 @@
        "France    666.0   501.0   610.0   1777"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2885,7 +2886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
