changes on medal data of sport

--- a/Project/Uppgift 2.ipynb
+++ b/Project/Uppgift 2.ipynb
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2195,7 +2195,7 @@
          }
         },
         "title": {
-         "text": "Countries who won medals on Wresling"
+         "text": "Countries who won medals on Wrestling"
         },
         "xaxis": {
          "anchor": "y",
@@ -2230,7 +2230,7 @@
     "fig = px.bar(sport, x=\"region\",\n",
     "    y=0,color =\"Medal\",\n",
     "    log_y = True,\n",
-    "    labels={\"Sport\": \"Sport\", \"0\": \"Number of medals\"}, title= \"Countries who won medals on Wresling\")\n",
+    "    labels={\"Sport\": \"Sport\", \"0\": \"Number of medals\"}, title= \"Countries who won medals on Wrestling\")\n",
     "fig.show()\n"
    ]
   }
